# mfti_hw_pj

./: .gitignore  README.md  pyproject.toml  requirements.txt
pages/: age_gist.html  age_kor.html  d_salary_city.html  exp_gist.html  exp_kor.html  median_zp_age_edu.html  relocation_trip.html  salary_edu.html  zp_gist.html  zp_kor.html
