[tool.poetry]
name = "mfti-hw-pj"
version = "0.1.0"
description = ""
authors = ["anastasiyachumakova <chumana.mmrx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
jupyterlab = "^4.0.9"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.18.0"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

